--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     //util
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'com.valdesekamdem.library:md-toast:0.9.0'
+    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
 }
