--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'com.valdesekamdem.library:md-toast:0.9.0'
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'com.balysv:material-ripple:1.0.2'
 }
