--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.valdesekamdem.library:md-toast:0.9.0'
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
     implementation 'com.balysv:material-ripple:1.0.2'
+    implementation 'com.github.arcadefire:nice-spinner:1.3.4'
 }
